--- a/package.json
+++ b/package.json
@@ -1,15 +1,16 @@
 {
-  "name" : "server",
-  "version" : "1.0.0",
-  "description" : "Test server",
-  "main" : "server.js",
-  "scripts" : {
-    "start" : "node server.js | bunyan"
+  "name": "server",
+  "version": "1.0.0",
+  "description": "Test server",
+  "main": "server.js",
+  "scripts": {
+    "start": "node server.js | bunyan"
   },
-  "author" : "Hudoborodov Valera",
-  "license" : "ISC",
-  "dependencies" : {
-    "bunyan" : "^1.8.5",
-    "express" : "^4.14.0"
+  "author": "Hudoborodov Valera",
+  "license": "ISC",
+  "dependencies": {
+    "bunyan": "^1.8.5",
+    "express": "^4.14.0",
+    "express-mongoose-docs": "^0.3.1"
   }
 }
