--- a/package.json
+++ b/package.json
@@ -12,5 +12,8 @@
     "bunyan": "^1.8.5",
     "express": "^4.14.0",
     "express-mongoose-docs": "^0.3.1"
+  },
+  "devDependencies": {
+    "eslint": "^3.14.0"
   }
 }
